[bumpversion]
current_version = 0.0.7
commit = True
tag = True
message = v{new_version} (from v{current_version})

[metadata]
name = scrapy-selenium
url = https://github.com/clemfromspace/scrapy-selenium
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrapy with selenium
long_description = file:README.md

[options]
include_package_data = true

[pep8]
max-line-length = 100
